--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
           </execution>
         </executions>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+                <finalName>SimpleHeal</finalName>
+            </configuration>
+        </plugin>
     </plugins>
     <resources>
       <resource>
